--- a/templates/search.html
+++ b/templates/search.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
     <style>
         body {
             background: linear-gradient(to right, #f6d365, #fda085);
@@ -46,17 +46,19 @@
 <body>
     <div class="container">
         <h1 class="text-center">Search Transactions</h1>
-        <form class="form-container" method="post">
+        <form action="{{ url_for('search_transactions') }}" method="POST">
             <div class="form-group">
-                <label for="min_amount">Minimum Amount:</label>
-                <input type="number" class="form-control" id="min_amount" name="min_amount" step="0.01" required>
+                <label for="min_amount">Minimum Value:</label>
+                <input type="number" name="min_amount" id="min_amount" class="form-control" required />
             </div>
+
             <div class="form-group">
-                <label for="max_amount">Maximum Amount:</label>
-                <input type="number" class="form-control" id="max_amount" name="max_amount" step="0.01" required>
+                <label for="max_amout">Maximum Value:</label>
+                <input type="number" name="max_amount" id="max_amout" class="form-control" required />
             </div>
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Search</button>
+
+            <div class="form-footer">
+                <input class="btn btn-primary" type="submit" value="Search Transactions" />
             </div>
         </form>
     </div>
